fixed content spacing issues yet again...and used variables to try to maintain consistency between ratios

--- a/src/_base.scss
+++ b/src/_base.scss
@@ -66,6 +66,8 @@ footer {
   }
 }
 
+$contentHeight: 79vh;
+
 .content {
-  min-height: 82vh;
+  min-height: $contentHeight;
 }
